--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: node_js
 node_js:
-  - 12
+  - "node"
 before_install:
   - npm i -g npm@6.14.4
+script:
+        - npm run build
+        - npm run format
